# end_to_end_ml_pipeline

./: main.py  pyproject.toml
Notebook/: charges_pipeline.pkl  cross_validation.ipynb  feature_selection.ipynb  hyperparametertuning .ipynb  metrics.ipynb  nlp.ipynb  notebook-1.ipynb  notebook-2.ipynb  notebook-3.ipynb  notebook-4.ipynb  notebook-5.ipynb  notebook.ipynb  pandasdrill.ipynb  preprocessing.ipynb  regression_notes  standardization.ipynb  test.ipynb
